update todo controller with api docs
